# FastRouterPythonSDK

./: .gitignore  DEPLOYMENT.md  MANIFEST.in  README.md  examples.py  fix_your_code.py  pyproject.toml  requirements.txt  setup.py  test_fastrouter.py
fastrouter/: __init__.py  chat.py  client.py  exceptions.py  response_models.py
fastrouter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
