[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastrouter"
version = "0.1.0"
description = "Python client library for the FastRouter API"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "FastRouter Team", email = "support@fastrouter.ai"},
]
keywords = ["fastrouter", "api", "client", "sdk", "ai", "llm", "chat", "completions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/fastrouter/fastrouter-python"
Documentation = "https://docs.fastrouter.ai/"
Repository = "https://github.com/fastrouter/fastrouter-python"
"Bug Reports" = "https://github.com/fastrouter/fastrouter-python/issues"
